# person-integration-into-scene

./: .gitignore  README.md  pyproject.toml
data/raw/: person1.HEIC
demos/: place_object_simple.ipynb  shadow_detection.ipynb
scripts/: bg_remover.py  birefnet_infer.py  person_detector.py  remove_bg.py
utils/: birefnet_infer.py  heic_to_jpg.py  person_detector.py
