[project]
name = "int-per-scene"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llvmlite>=0.44.0",
    "numba>=0.61.2",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "rembg[cpu]>=2.0.66",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
]
